# python-scraperlib

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yml  openzim.toml  pyproject.toml  requirements.txt  setup.py  tasks.py  test  tox.ini
.github/workflows/: Publish.yaml  PublishDev.yaml  QA.yaml  Tests.yaml  ci.yml  release.yml
contrib/: README.md  encode_video.py
docs/: functional_architecture.md  index.md  software_architecture.md  technical_architecture.md
docs/scripts/: generate_api_nav.py
javascript/: .prettierignore  package.json  rollup.config.js
javascript/src/: wombatSetup.js
rules/: generate_rules.py  rules.yaml
src/: zimwriterfs.py
src/zimscraperlib/: VERSION  __about__.py  __init__.py  constants.py  download.py  executor.py  filesystem.py  fix_ogvjs_dist.py  html.py  i18n.py  imaging.py  inputs.py  logging.py  misc.py  types.py  typing.py  uri.py  video.py  zim.py
src/zimscraperlib/image/: __init__.py  conversion.py  convertion.py  illustration.py  optimization.py  presets.py  probing.py  transform.py  transformation.py  utils.py
src/zimscraperlib/rewriting/: css.py  html.py  js.py  rx_replacer.py  url_rewriting.py
src/zimscraperlib/rewriting/statics/: README.md
src/zimscraperlib/rewriting/templates/: head_insert.html
src/zimscraperlib/video/: __init__.py  config.py  encoding.py  presets.py  probing.py  video.py
src/zimscraperlib/zim/: __init__.py  _libkiwix.py  archive.py  creator.py  dedup.py  filesystem.py  indexing.py  items.py  metadata.py  metadata_dict.py  providers.py  rewriting.py
tests/: conftest.py  test_constants.py  test_executor.py
tests/download/: conftest.py  test_download.py
tests/files/: encrypted.txt  milderm.txt  single_wave_icon.gbr  video.mkv  video.webm
tests/filesystem/: test_filesystem.py
tests/html/: conftest.py  test_html.py
tests/i18n/: test_i18n.py
tests/i18n/locale/fr/LC_MESSAGES/: messages.mo  messages.po
tests/i18n/locale/pt/LC_MESSAGES/: messages.mo  messages.po
tests/image/: test_illustration.py  test_image.py
tests/imaging/: conftest.py  test_imaging.py
tests/inputs/: test_inputs.py
tests/logging/: conftest.py  test_logging.py
tests/misc/: test_misc.py
tests/ogvjs/: conftest.py  test_ogvjs.py
tests/rewriting/: conftest.py  test_css_rewriting.py  test_html_rewriting.py  test_js_rewriting.py  test_rx_replacer.py  test_url_rewriting.py  utils.py
tests/types/: test_types.py
tests/typing/: test_typing.py
tests/uri/: test_uri.py
tests/video/: conftest.py  test_encoding.py  test_video.py
tests/zim/: conftest.py  test_archive.py  test_dedup.py  test_fs.py  test_indexing.py  test_libkiwix.py  test_metadata.py  test_metadata_dict.py  test_rewriting.py  test_zim.py  test_zim_creator.py
